--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="./dist/styles/styles.css">
 
 
     <title>My Tech Team</title>
@@ -23,7 +23,7 @@
         <div class="manager-card card mb-3">
             <div class="row no-gutters">
                 <div class="col-md-2 card-img  bg-light icon-space">
-                    <img src="./images/manager.png" class="icon card-img" alt="Manager">
+                    <img src="./dist/images/manager.png" class="icon card-img" alt="Manager">
                 </div>
                 <div class="col-md-9">
                     <div class="card-body">
@@ -48,7 +48,7 @@
             <div class="col">
                 <div class="card m-2" style="width: 18rem;">
                     <div class="icon-space d-flex justify-content-center eng-div">
-                        <img src="./images/engineerBk.png" class="icon-2 card-img-top" alt="...">
+                        <img src="./dist/images/engineerBk.png" class="icon-2 card-img-top" alt="...">
                     </div>
                     <div class="card-body eng-div">
                         <h4 class="card-title mb-3">Engineer One</h4>
@@ -65,7 +65,7 @@
             <div class="col">
                 <div class="card m-2" style="width: 18rem;">
                     <div class="icon-space d-flex justify-content-center eng-div">
-                        <img src="./images/engineerBk.png" class="icon-2 card-img-top" alt="...">
+                        <img src="./dis/images/engineerBk.png" class="icon-2 card-img-top" alt="...">
                     </div>
                     <div class="card-body eng-div">
                         <h4 class="card-title mb-3">Engineer Two</h4>
@@ -88,7 +88,7 @@
             <div class="col">
                 <div class="card m-2" style="width: 18rem;">
                     <div class="icon-space d-flex  justify-content-center int-div">
-                        <img src="./images/internBk.png" class="icon-2 card-img-top" alt="...">
+                        <img src="./dist/images/internBk.png" class="icon-2 card-img-top" alt="...">
                     </div>
                     <div class="card-body int-div">
                         <h4 class="card-title mb-3">Intern One</h4>
@@ -105,7 +105,7 @@
             <div class="col">
                 <div class="card m-2" style="width: 18rem;">
                     <div class="icon-space d-flex  justify-content-center int-div">
-                        <img src="./images/internBk.png" class="icon-2 card-img-top" alt="...">
+                        <img src="./dist/images/internBk.png" class="icon-2 card-img-top" alt="...">
                     </div>
                     <div class="card-body int-div">
                         <h4 class="card-title mb-3">Intern Two</h4>
@@ -122,7 +122,7 @@
             <div class="col">
                 <div class="card m-2" style="width: 18rem;">
                     <div class="icon-space d-flex  justify-content-center int-div">
-                        <img src="./images/internBk.png" class="icon-2 card-img-top" alt="...">
+                        <img src="./dist/images/internBk.png" class="icon-2 card-img-top" alt="...">
                     </div>
                     <div class="card-body int-div">
                         <h4 class="card-title mb-3">Intern Three</h4>
